ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: af7222290229940958003321782e3f33-200878161.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /loan/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: loan-clusterip-srv
                port:
                  number: 80
          - path: /borrower/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: borrower-clusterip-srv
                port:
                  number: 80
